<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/photograph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photograph"
            android:textSize="@dimen/text_size_18"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/margin_15"
            android:background="@drawable/item_seletor"
            android:textColor="@color/black"/>

        <View
            style="@style/line_1"/>

        <TextView
            android:id="@+id/album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album"
            android:textSize="@dimen/text_size_18"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/margin_15"
            android:background="@drawable/item_seletor"
            android:textColor="@color/black"/>

        <View
            style="@style/line_1"/>

        <Button
            android:id="@+id/accessory_cancel_btn"
            style="@style/common_btn"
            android:background="@drawable/common_btn_red_selector"
            android:layout_margin="@dimen/margin_10"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>