<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:visibility="gone">

        <TextView
            style="@style/main_title_bar_text"
            android:gravity="center"
            android:text="@string/menu_mine"
            android:textColor="@color/white" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/title_mine_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/head_title_bar_height"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="我的"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20"
        android:visibility="gone" />

    <ViewStub
        android:id="@+id/notification_view_stub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_mine_tv"
        android:layout="@layout/check_notification_layout"
        android:visibility="visible" />

    <com.yunwei.wetlandpark.view.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/head_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@mipmap/user_bj"
                android:gravity="center">

                <ImageView
                    android:id="@+id/account_head_iv"
                    android:layout_width="80dip"
                    android:layout_height="80dip"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_20"
                    android:src="@mipmap/homepage_headimg_defaut" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_15"
                    android:layout_toRightOf="@+id/account_head_iv"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mine_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray_light"
                        android:textSize="@dimen/text_size_20" />

                    <TextView
                        android:id="@+id/mine_dev_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray_light"
                        android:textSize="@dimen/text_size_16" />

                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="visible">

                <View style="@style/line_1" />

                <TextView
                    android:id="@+id/set_msg_text"
                    style="@style/mine_item_text"
                    android:background="@drawable/item_seletor"
                    android:drawableLeft="@mipmap/me_btn_message"
                    android:drawablePadding="@dimen/margin_10"
                    android:drawableRight="@mipmap/arrow_right"
                    android:paddingBottom="@dimen/margin_12"
                    android:paddingLeft="@dimen/margin_15"
                    android:paddingRight="@dimen/margin_15"
                    android:paddingTop="@dimen/margin_12"
                    android:text="@string/set_msg_info"
                    android:visibility="visible" />

                <View
                    style="@style/line_1"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/set_track_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/item_seletor"
                    android:drawableLeft="@mipmap/me_btn_setup"
                    android:drawablePadding="@dimen/margin_10"
                    android:drawableRight="@mipmap/arrow_right"
                    android:paddingBottom="@dimen/margin_12"
                    android:paddingLeft="@dimen/margin_15"
                    android:paddingRight="@dimen/margin_15"
                    android:paddingTop="@dimen/margin_12"
                    android:text="@string/set_track_info"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_16"
                    android:visibility="gone" />

                <View
                    style="@style/line_1"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@color/white"
                android:orientation="vertical">

                <View style="@style/line_1" />

                <TextView
                    android:id="@+id/set_idea_text"
                    style="@style/mine_item_text"
                    android:background="@drawable/item_seletor"
                    android:drawableLeft="@mipmap/me_btn_suggestion"
                    android:drawablePadding="@dimen/margin_10"
                    android:drawableRight="@mipmap/arrow_right"
                    android:paddingBottom="@dimen/margin_12"
                    android:paddingLeft="@dimen/margin_15"
                    android:paddingRight="@dimen/margin_15"
                    android:paddingTop="@dimen/margin_12"
                    android:text="@string/set_idea_str"
                    android:visibility="visible" />

                <View
                    style="@style/line_1"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/set_about_text"
                    style="@style/mine_item_text"
                    android:background="@drawable/item_seletor"
                    android:drawableLeft="@mipmap/icon_about"
                    android:drawablePadding="@dimen/margin_10"
                    android:drawableRight="@mipmap/arrow_right"
                    android:gravity="center|left"
                    android:paddingBottom="@dimen/margin_12"
                    android:paddingLeft="@dimen/margin_15"
                    android:paddingRight="@dimen/margin_15"
                    android:paddingTop="@dimen/margin_12"
                    android:text="@string/set_about" />

                <View style="@style/line_1" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@color/white"
                android:orientation="vertical">

                <View style="@style/line_1" />

                <TextView
                    android:id="@+id/set_change_user_text"
                    style="@style/mine_item_text"
                    android:background="@drawable/item_seletor"
                    android:drawableLeft="@mipmap/icon_switch_user"
                    android:drawablePadding="@dimen/margin_10"
                    android:drawableRight="@mipmap/arrow_right"
                    android:gravity="center|left"
                    android:paddingBottom="@dimen/margin_12"
                    android:paddingLeft="@dimen/margin_15"
                    android:paddingRight="@dimen/margin_15"
                    android:paddingTop="@dimen/margin_12"
                    android:text="@string/change_user" />

                <View style="@style/line_1" />

                <TextView
                    android:id="@+id/set_exit_text"
                    style="@style/mine_item_text"
                    android:background="@drawable/item_seletor"
                    android:drawableLeft="@mipmap/icon_quit"
                    android:drawablePadding="@dimen/margin_10"
                    android:drawableRight="@mipmap/arrow_right"
                    android:gravity="center|left"
                    android:paddingBottom="@dimen/margin_12"
                    android:paddingLeft="@dimen/margin_15"
                    android:paddingRight="@dimen/margin_15"
                    android:paddingTop="@dimen/margin_12"
                    android:text="@string/exit" />

                <View style="@style/line_1" />

            </LinearLayout>
        </LinearLayout>
    </com.yunwei.wetlandpark.view.ReboundScrollView>


</LinearLayout>